@@ -4,15 +4,26 @@ import com.bakuard.nutritionManager.config.AppConfigData;
 import com.bakuard.nutritionManager.dal.*;
 import com.bakuard.nutritionManager.dto.auth.JwsResponse;
 import com.bakuard.nutritionManager.dto.dishes.*;
-import com.bakuard.nutritionManager.dto.exceptions.*;
+import com.bakuard.nutritionManager.dto.exceptions.ConstraintResponse;
+import com.bakuard.nutritionManager.dto.exceptions.ExceptionResponse;
+import com.bakuard.nutritionManager.dto.exceptions.SuccessResponse;
 import com.bakuard.nutritionManager.dto.menus.*;
-import com.bakuard.nutritionManager.dto.products.*;
+import com.bakuard.nutritionManager.dto.products.ProductAddRequest;
+import com.bakuard.nutritionManager.dto.products.ProductFieldsResponse;
+import com.bakuard.nutritionManager.dto.products.ProductResponse;
+import com.bakuard.nutritionManager.dto.products.ProductUpdateRequest;
 import com.bakuard.nutritionManager.dto.users.UserResponse;
 import com.bakuard.nutritionManager.model.*;
-import com.bakuard.nutritionManager.validation.*;
-import com.bakuard.nutritionManager.model.filters.*;
+import com.bakuard.nutritionManager.model.filters.AnyFilter;
+import com.bakuard.nutritionManager.model.filters.Filter;
+import com.bakuard.nutritionManager.model.filters.MinTagsFilter;
+import com.bakuard.nutritionManager.model.filters.Sort;
 import com.bakuard.nutritionManager.model.util.Page;
-import com.bakuard.nutritionManager.model.util.Pageable;
+import com.bakuard.nutritionManager.model.util.PageableByNumber;
+import com.bakuard.nutritionManager.service.report.ReportService;
+import com.bakuard.nutritionManager.validation.Constraint;
+import com.bakuard.nutritionManager.validation.RuleException;
+import com.bakuard.nutritionManager.validation.ValidateException;
 
 import org.springframework.context.MessageSource;
 import org.springframework.context.i18n.LocaleContextHolder;
@@ -109,6 +120,57 @@ public class DtoMapper {
         return products.map(this::toProductResponse);
     }
 
+    public ProductFieldsResponse toProductFieldsResponse(UUID userId) {
+        Criteria criteria = new Criteria().
+                setPageable(PageableByNumber.of(1000, 0)).
+                setFilter(Filter.user(userId));
+
+        Page<String> manufacturers = productRepository.getManufacturers(criteria);
+        Page<String> grades = productRepository.getGrades(criteria);
+        Page<String> shops = productRepository.getShops(criteria);
+        Page<String> categories = productRepository.getCategories(criteria);
+        Page<Tag> tags = productRepository.getTags(criteria);
+
+        ProductFieldsResponse response = new ProductFieldsResponse();
+        response.setTags(tags.getContent().stream().map(t -> new FieldResponse(t.getValue())).toList());
+        response.setGrades(grades.getContent().stream().map(FieldResponse::new).toList());
+        response.setManufacturers(manufacturers.getContent().stream().map(FieldResponse::new).toList());
+        response.setShops(shops.getContent().stream().map(FieldResponse::new).toList());
+        response.setCategories(categories.getContent().stream().map(FieldResponse::new).toList());
+
+        return response;
+    }
+
+    public Criteria toProductCriteria(int page,
+                                      int size,
+                                      UUID userId,
+                                      String sortRule,
+                                      boolean onlyFridge,
+                                      List<String> categories,
+                                      List<String> shops,
+                                      List<String> grades,
+                                      List<String> manufacturers,
+                                      List<String> tags) {
+        List<Filter> filters = new ArrayList<>();
+        filters.add(Filter.user(userId));
+        if(onlyFridge) filters.add(Filter.greater(BigDecimal.ZERO));
+        if(categories != null && !categories.isEmpty()) filters.add(Filter.anyCategory(categories));
+        if(shops != null && !shops.isEmpty()) filters.add(Filter.anyShop(shops));
+        if(grades != null && !grades.isEmpty()) filters.add(Filter.anyGrade(grades));
+        if(manufacturers != null && !manufacturers.isEmpty()) filters.add(Filter.anyManufacturer(manufacturers));
+        if(tags != null && !tags.isEmpty()) filters.add(Filter.minTags(toTags(tags)));
+
+        Filter filter = null;
+        if(filters.size() == 1) filter = filters.get(0);
+        else filter = Filter.and(filters);
+
+        return new Criteria().
+                setPageable(PageableByNumber.of(size, page)).
+                setSort(Sort.products(Arrays.asList(sortRule))).
+                setFilter(filter);
+    }
+
+
 
     public DishResponse toDishResponse(Dish dish) {
         DishResponse response = new DishResponse();
@@ -124,7 +186,7 @@ public class DtoMapper {
         List<DishIngredient> ingredients = dish.getIngredients();
         response.setIngredients(
                 IntStream.range(0, ingredients.size()).
-                        mapToObj(i -> toDishIngredientRequestResponse(ingredients.get(i), i)).
+                        mapToObj(i -> toIngredientResponse(ingredients.get(i), i)).
                         toList()
         );
 
@@ -145,13 +207,15 @@ public class DtoMapper {
                 setConfig(appConfiguration).
                 setRepository(productRepository);
 
-        IntStream.range(0, dto.getIngredients().size()).
-                forEach(i -> {
-                    DishIngredientRequestResponse ingredient = dto.getIngredients().get(i);
-                    builder.addIngredient(toDishIngredient(userId, ingredient, i));
-                });
+        if(dto.getIngredients() != null) {
+            IntStream.range(0, dto.getIngredients().size()).
+                    forEach(i -> {
+                        IngredientAddRequest ingredient = dto.getIngredients().get(i);
+                        builder.addIngredient(toDishIngredient(userId, ingredient, i));
+                    });
+        }
 
-        dto.getTags().forEach(builder::addTag);
+        if(dto.getTags() != null) dto.getTags().forEach(builder::addTag);
 
         return builder.tryBuild();
     }
@@ -170,13 +234,15 @@ public class DtoMapper {
                 setConfig(appConfiguration).
                 setRepository(productRepository);
 
-        IntStream.range(0, dto.getIngredients().size()).
-                forEach(i -> {
-                    DishIngredientRequestResponse ingredient = dto.getIngredients().get(i);
-                    builder.addIngredient(toDishIngredient(userId, ingredient, i));
-                });
+        if(dto.getIngredients() != null) {
+            IntStream.range(0, dto.getIngredients().size()).
+                    forEach(i -> {
+                        IngredientUpdateRequest ingredient = dto.getIngredients().get(i);
+                        builder.addIngredient(toDishIngredient(userId, ingredient, i));
+                    });
+        }
 
-        dto.getTags().forEach(builder::addTag);
+        if(dto.getTags() != null) dto.getTags().forEach(builder::addTag);
 
         return builder.tryBuild();
     }
@@ -185,125 +251,43 @@ public class DtoMapper {
         return dishes.map(this::toDishForListResponse);
     }
 
-    public DishProductsListResponse toDishProductsListResponse(UUID userId, UUID dishId, BigDecimal servingNumber) {
+    public DishProductsResponse toDishProductsResponse(UUID userId, UUID dishId, BigDecimal servingNumber) {
         Dish dish = dishRepository.tryGetById(userId, dishId);
-
-        servingNumber = servingNumber == null ? BigDecimal.ONE : servingNumber;
-        return toDishProductsListResponse(dish, servingNumber);
+        return toDishProductsResponse(dish, servingNumber == null ? BigDecimal.ONE : servingNumber);
     }
 
-    public Optional<BigDecimal> toDishPrice(UUID userId, DishPriceRequest dto) {
+    public ReportService.DishProductsReportData toDishProductsReportData(UUID userId, DishReportRequest dto) {
         Dish dish = dishRepository.tryGetById(userId, dto.getDishId());
 
-        List<Dish.ProductConstraint> indexes = dto.getProducts().stream().
+        List<Dish.ProductConstraint> constraints = dto.getProducts().stream().
                 map(pr -> new Dish.ProductConstraint(pr.getIngredientIndex(), pr.getProductIndex())).
                 toList();
-        List<Dish.IngredientProduct> ingredients = dish.getProductForEachIngredient(indexes);
 
-        return dish.getLackProductPrice(ingredients, dto.getServingNumber());
-    }
-
-
-    public MenuResponse toMenuResponse(Menu menu) {
-        MenuResponse response = new MenuResponse();
-        response.setId(menu.getId());
-        response.setUser(toUserResponse(menu.getUser()));
-        response.setName(menu.getName());
-        response.setImageUrl(menu.getImageUrl());
-        response.setDescription(menu.getDescription());
-        response.setItems(
-                menu.getItems().stream().map(this::toMenuItemRequestResponse).toList()
+        return new ReportService.DishProductsReportData(
+                dish,
+                dto.getServingNumber(),
+                constraints,
+                LocaleContextHolder.getLocale()
         );
-        response.setTags(toTagsResponse(menu.getTags()));
+    }
+
+    public DishFieldsResponse toDishFieldsResponse(UUID userId) {
+        Criteria criteria = new Criteria().
+                setPageable(PageableByNumber.of(1000, 0)).
+                setFilter(Filter.user(userId));
+
+        Page<Tag> tags = dishRepository.getTags(criteria);
+        Page<String> units = dishRepository.getUnits(criteria);
+        Page<String> names = dishRepository.getNames(criteria);
+        Page<String> categories = productRepository.getCategories(criteria);
+
+        DishFieldsResponse response = new DishFieldsResponse();
+        response.setDishTags(tags.getContent().stream().map(t -> new FieldResponse(t.getValue())).toList());
+        response.setDishUnits(units.getContent().stream().map(FieldResponse::new).toList());
+        response.setDishNames(names.getContent().stream().map(FieldResponse::new).toList());
+        response.setProductCategories(categories.getContent().stream().map(FieldResponse::new).toList());
+
         return response;
-    }
-
-    public Menu toMenu(UUID userId, MenuAddRequest dto) {
-        User user = userRepository.tryGetById(userId);
-
-        Menu.Builder builder = new Menu.Builder().
-                generateId().
-                setUser(user).
-                setName(dto.getName()).
-                setDescription(dto.getDescription()).
-                setImageUrl(dto.getImageUrl()).
-                setConfig(appConfiguration);
-
-        dto.getTags().forEach(builder::addTag);
-
-        dto.getItems().forEach(item -> builder.addItem(toMenuItem(userId, item)));
-
-        return builder.tryBuild();
-    }
-
-    public Menu toMenu(UUID userId, MenuUpdateRequest dto) {
-        User user = userRepository.tryGetById(userId);
-
-        Menu.Builder builder = new Menu.Builder().
-                setId(dto.getId()).
-                setUser(user).
-                setName(dto.getName()).
-                setDescription(dto.getDescription()).
-                setImageUrl(dto.getImageUrl()).
-                setConfig(appConfiguration);
-
-        dto.getTags().forEach(builder::addTag);
-
-        dto.getItems().forEach(item -> builder.addItem(toMenuItem(userId, item)));
-
-        return builder.tryBuild();
-    }
-
-    public Page<MenuForListResponse> toMenusResponse(Page<Menu> menus) {
-        return menus.map(this::toMenuForListResponse);
-    }
-
-    public DishProductsListResponse toDishProductsListResponse(UUID userId, UUID menuId, String dishName, BigDecimal quantity) {
-        Menu menu = menuRepository.tryGetById(userId, menuId);
-        MenuItem menuItem = menu.tryGetItem(dishName);
-
-        quantity = quantity == null ? BigDecimal.ONE : quantity;
-        return toDishProductsListResponse(menuItem.getDish(), menuItem.getNecessaryQuantity(quantity));
-    }
-
-    public Optional<BigDecimal> toMenuPrice(UUID userId, MenuPriceRequest dto) {
-        Menu menu = menuRepository.tryGetById(userId, dto.getMenuId());
-
-        List<Menu.ProductConstraint> constraints = dto.getProducts().stream().
-                map(d -> new Menu.ProductConstraint(d.getDishName(), d.getIngredientIndex(), d.getProductIndex())).
-                toList();
-        List<Menu.MenuItemProduct> items = menu.getMenuItemProducts(constraints);
-        return menu.getLackProductsPrice(items, dto.getQuantity());
-    }
-
-
-    public Criteria toProductCriteria(int page,
-                                      int size,
-                                      UUID userId,
-                                      String sortRule,
-                                      boolean onlyFridge,
-                                      String category,
-                                      List<String> shops,
-                                      List<String> grades,
-                                      List<String> manufacturers,
-                                      List<String> tags) {
-        List<Filter> filters = new ArrayList<>();
-        filters.add(Filter.user(userId));
-        if(onlyFridge) filters.add(Filter.greater(BigDecimal.ZERO));
-        if(category != null) filters.add(Filter.anyCategory(category));
-        if(shops != null && !shops.isEmpty()) filters.add(Filter.anyShop(shops));
-        if(grades != null && !grades.isEmpty()) filters.add(Filter.anyGrade(grades));
-        if(manufacturers != null && !manufacturers.isEmpty()) filters.add(Filter.anyManufacturer(manufacturers));
-        if(tags != null && !tags.isEmpty()) filters.add(Filter.minTags(toTags(tags)));
-
-        Filter filter = null;
-        if(filters.size() == 1) filter = filters.get(0);
-        else filter = Filter.and(filters);
-
-        return new Criteria().
-                setPageable(Pageable.of(size, page)).
-                setSort(Sort.products(sortRule != null ? List.of(sortRule) : List.of())).
-                setFilter(filter);
     }
 
     public Criteria toDishCriteria(int page,
@@ -327,9 +311,147 @@ public class DtoMapper {
         else filter = Filter.and(filters);
 
         return new Criteria().
-                setPageable(Pageable.of(size, page)).
-                setSort(Sort.dishes(sortRule != null ? List.of(sortRule) : List.of())).
+                setPageable(PageableByNumber.of(size, page)).
+                setSort(Sort.dishes(Arrays.asList(sortRule))).
                 setFilter(filter);
+    }
+
+
+
+    public MenuResponse toMenuResponse(Menu menu) {
+        MenuResponse response = new MenuResponse();
+        response.setId(menu.getId());
+        response.setUser(toUserResponse(menu.getUser()));
+        response.setName(menu.getName());
+        response.setImageUrl(menu.getImageUrl());
+        response.setDescription(menu.getDescription());
+        response.setItems(
+                IntStream.range(0, menu.getMenuItemNumbers()).
+                        mapToObj(i -> toMenuItemResponse(menu.tryGetItem(i), i)).
+                        toList()
+        );
+        response.setTags(toTagsResponse(menu.getTags()));
+        return response;
+    }
+
+    public Menu toMenu(UUID userId, MenuAddRequest dto) {
+        User user = userRepository.tryGetById(userId);
+
+        Menu.Builder builder = new Menu.Builder().
+                generateId().
+                setUser(user).
+                setName(dto.getName()).
+                setDescription(dto.getDescription()).
+                setImageUrl(dto.getImageUrl()).
+                setConfig(appConfiguration);
+
+        if(dto.getTags() != null) dto.getTags().forEach(builder::addTag);
+
+        if(dto.getItems() != null) dto.getItems().forEach(item -> builder.addItem(toMenuItem(userId, item)));
+
+        return builder.tryBuild();
+    }
+
+    public Menu toMenu(UUID userId, MenuUpdateRequest dto) {
+        User user = userRepository.tryGetById(userId);
+
+        Menu.Builder builder = new Menu.Builder().
+                setId(dto.getId()).
+                setUser(user).
+                setName(dto.getName()).
+                setDescription(dto.getDescription()).
+                setImageUrl(dto.getImageUrl()).
+                setConfig(appConfiguration);
+
+        if(dto.getTags() != null) dto.getTags().forEach(builder::addTag);
+
+        if(dto.getItems() != null) dto.getItems().forEach(item -> builder.addItem(toMenuItem(userId, item)));
+
+        return builder.tryBuild();
+    }
+
+    public Page<MenuForListResponse> toMenusResponse(Page<Menu> menus) {
+        return menus.map(this::toMenuForListResponse);
+    }
+
+    public MenuFieldsResponse toMenuFieldsResponse(UUID userId) {
+        Criteria criteria = new Criteria().
+                setPageable(PageableByNumber.of(1000, 0)).
+                setFilter(Filter.user(userId));
+
+        Page<Tag> menuTags = menuRepository.getTags(criteria);
+        Page<String> menuNames = menuRepository.getNames(criteria);
+        Page<String> dishNames = dishRepository.getNames(criteria);
+
+        MenuFieldsResponse response = new MenuFieldsResponse();
+        response.setMenuTags(menuTags.getContent().stream().map(t -> new FieldResponse(t.getValue())).toList());
+        response.setMenuNames(menuNames.getContent().stream().map(FieldResponse::new).toList());
+        response.setDishNames(dishNames.getContent().stream().map(FieldResponse::new).toList());
+
+        return response;
+    }
+
+    public ReportService.MenuProductsReportData toMenuProductsReportData(UUID userId, MenuReportRequest dto) {
+        Menu menu = menuRepository.tryGetById(userId, dto.getMenuId());
+
+        List<Menu.ProductConstraint> constraints = dto.getProducts().stream().
+                map(d -> new Menu.ProductConstraint(d.getDishName(), d.getIngredientIndex(), d.getProductIndex())).
+                toList();
+
+        return new ReportService.MenuProductsReportData(
+                menu,
+                dto.getMenuNumber(),
+                constraints,
+                LocaleContextHolder.getLocale()
+        );
+    }
+
+    public MenuDishesProductsListResponse toMenuDishesProductsListResponse(UUID userId,
+                                                                           UUID menuId,
+                                                                           BigDecimal quantity) {
+        Menu menu = menuRepository.tryGetById(userId, menuId);
+        Optional<BigDecimal> quantityOp = Optional.ofNullable(quantity);
+
+        MenuDishesProductsListResponse response = new MenuDishesProductsListResponse();
+        response.setMenuId(menuId);
+        response.setMenuName(menu.getName());
+        response.setMenuQuantity(quantityOp.orElse(BigDecimal.ONE));
+        response.setDishesProducts(
+                menu.getItems().stream().
+                        map(item -> toDishProductsResponse(
+                                item.getDish(), item.getNecessaryQuantity(quantityOp.orElse(BigDecimal.ONE)))
+                        ).
+                        toList()
+        );
+
+        return response;
+    }
+
+    public MenuDishProductsListResponse toMenuDishProductsListResponse(UUID userId,
+                                                                       UUID menuId,
+                                                                       String dishName,
+                                                                       BigDecimal quantity) {
+        Menu menu = menuRepository.tryGetById(userId, menuId);
+        Optional<BigDecimal> quantityOp = Optional.ofNullable(quantity);
+
+        MenuDishProductsListResponse response = new MenuDishProductsListResponse();
+        response.setMenuId(menuId);
+        response.setMenuName(menu.getName());
+        response.setMenuQuantity(quantityOp.orElse(BigDecimal.ONE));
+        response.setDishes(menu.getItems().stream().
+                map(this::toDishNameAndIdResponse).
+                toList());
+        if(dishName != null) {
+            MenuItem menuItem = menu.tryGetItem(dishName);
+            BigDecimal dishQuantity = menuItem.getNecessaryQuantity(quantityOp.orElse(BigDecimal.ONE));
+            response.setDishProducts(toDishProductsResponse(menuItem.getDish(), dishQuantity));
+        } else if(menu.getMenuItemNumbers() > 0) {
+            MenuItem menuItem = menu.getItems().get(0);
+            BigDecimal dishQuantity = menuItem.getNecessaryQuantity(quantityOp.orElse(BigDecimal.ONE));
+            response.setDishProducts(toDishProductsResponse(menuItem.getDish(), dishQuantity));
+        }
+
+        return response;
     }
 
     public Criteria toMenuCriteria(int page,
@@ -353,68 +475,11 @@ public class DtoMapper {
         else filter = Filter.and(filters);
 
         return new Criteria().
-                setPageable(Pageable.of(size, page)).
-                setSort(Sort.dishes(sortRule != null ? List.of(sortRule) : List.of())).
+                setPageable(PageableByNumber.of(size, page)).
+                setSort(Sort.menus(Arrays.asList(sortRule))).
                 setFilter(filter);
     }
 
-
-    public ProductFieldsResponse toProductFieldsResponse(UUID userId) {
-        Criteria criteria = new Criteria().
-                setPageable(Pageable.of(1000, 0)).
-                setFilter(Filter.user(userId));
-
-        Page<String> manufacturers = productRepository.getManufacturers(criteria);
-        Page<String> grades = productRepository.getGrades(criteria);
-        Page<String> shops = productRepository.getShops(criteria);
-        Page<String> categories = productRepository.getCategories(criteria);
-        Page<Tag> tags = productRepository.getTags(criteria);
-
-        ProductFieldsResponse response = new ProductFieldsResponse();
-        response.setTags(tags.getContent().stream().map(t -> new FieldResponse(t.getValue())).toList());
-        response.setGrades(grades.getContent().stream().map(FieldResponse::new).toList());
-        response.setManufacturers(manufacturers.getContent().stream().map(FieldResponse::new).toList());
-        response.setShops(shops.getContent().stream().map(FieldResponse::new).toList());
-        response.setCategories(categories.getContent().stream().map(FieldResponse::new).toList());
-
-        return response;
-    }
-
-    public DishFieldsResponse toDishFieldsResponse(UUID userId) {
-        Criteria criteria = new Criteria().
-                setPageable(Pageable.of(1000, 0)).
-                setFilter(Filter.user(userId));
-
-        Page<Tag> tags = dishRepository.getTags(criteria);
-        Page<String> units = dishRepository.getUnits(criteria);
-        Page<String> names = dishRepository.getNames(criteria);
-        Page<String> categories = productRepository.getCategories(criteria);
-
-        DishFieldsResponse response = new DishFieldsResponse();
-        response.setDishTags(tags.getContent().stream().map(t -> new FieldResponse(t.getValue())).toList());
-        response.setDishUnits(units.getContent().stream().map(FieldResponse::new).toList());
-        response.setDishNames(names.getContent().stream().map(FieldResponse::new).toList());
-        response.setProductCategories(categories.getContent().stream().map(FieldResponse::new).toList());
-
-        return response;
-    }
-
-    public MenuFieldsResponse toMenuFieldsResponse(UUID userId) {
-        Criteria criteria = new Criteria().
-                setPageable(Pageable.of(1000, 0)).
-                setFilter(Filter.user(userId));
-
-        Page<Tag> menuTags = menuRepository.getTags(criteria);
-        Page<String> menuNames = menuRepository.getNames(criteria);
-        Page<String> dishNames = dishRepository.getNames(criteria);
-
-        MenuFieldsResponse response = new MenuFieldsResponse();
-        response.setMenuTags(menuTags.getContent().stream().map(t -> new FieldResponse(t.getValue())).toList());
-        response.setMenuNames(menuNames.getContent().stream().map(FieldResponse::new).toList());
-        response.setDishNames(dishNames.getContent().stream().map(FieldResponse::new).toList());
-
-        return response;
-    }
 
 
     public <T> SuccessResponse<T> toSuccessResponse(String keyMessage, T body) {
@@ -441,31 +506,30 @@ public class DtoMapper {
     }
 
 
+
     public ExceptionResponse toExceptionResponse(HttpStatus httpStatus, String keyMessage) {
-        return new ExceptionResponse(
-                httpStatus,
-                getMessage(keyMessage, "unexpected error"),
-                getMessage("errorTitle", "Error")
-        );
+        ExceptionResponse response = new ExceptionResponse(httpStatus);
+        ConstraintResponse constraintResponse = new ConstraintResponse();
+        constraintResponse.setTitle(getMessage("constraintTitle", "Reason"));
+        constraintResponse.setMessage(getMessage(keyMessage, "Unexpected exception"));
+        response.addReason(constraintResponse);
+        return response;
     }
 
     public ExceptionResponse toExceptionResponse(ValidateException e) {
         HttpStatus httpStatus = HttpStatus.BAD_REQUEST;
-        String userMessageKey = e.getUserMessageKey().orElse(null);
-        if(userMessageKey != null && userMessageKey.startsWith("AuthService")) {
+
+        if(e.containsConstraint(Constraint.CORRECT_JWS) || e.containsConstraint(Constraint.CORRECT_CREDENTIALS)) {
             httpStatus = HttpStatus.FORBIDDEN;
         } else if(e.containsConstraint(Constraint.ENTITY_MUST_EXISTS_IN_DB)) {
             httpStatus = HttpStatus.NOT_FOUND;
         }
 
-        ExceptionResponse response = new ExceptionResponse(
-                httpStatus,
-                getMessage(userMessageKey, null),
-                getMessage("errorTitle", "Error")
-        );
+        ExceptionResponse response = new ExceptionResponse(httpStatus);
         e.forEach(constraint -> response.addReason(toConstraintResponse(constraint)));
         return response;
     }
+
 
 
     private ConstraintResponse toConstraintResponse(RuleException ruleException) {
@@ -523,40 +587,6 @@ public class DtoMapper {
         return response;
     }
 
-    private DishProductsListResponse toDishProductsListResponse(Dish dish, BigDecimal servingNumber) {
-        DishProductsListResponse response = new DishProductsListResponse();
-        response.setDishId(dish.getId());
-        response.setServingNumber(servingNumber);
-        response.setCategories(
-                IntStream.range(0, dish.getIngredientNumber()).
-                        mapToObj(ingredientIndex -> {
-                            DishIngredient ingredient = dish.getIngredient(ingredientIndex).orElseThrow();
-
-                            List<Dish.IngredientProduct> products = dish.getProducts(ingredientIndex, 0).
-                                    orElseThrow().getContent();
-
-                            DishIngredientForListResponse ir = new DishIngredientForListResponse();
-                            ir.setIngredientIndex(ingredientIndex);
-                            ir.setProductCategory(ingredient.getName());
-                            ir.setProducts(
-                                    products.stream().
-                                            map(ingredientProduct ->
-                                                    toProductAsDishIngredientResponse(dish,
-                                                            ingredientProduct,
-                                                            ingredientProduct.productIndex() == 0,
-                                                            servingNumber)
-                                            ).
-                                            toList()
-                            );
-
-                            return ir;
-                        }).
-                        toList()
-        );
-
-        return response;
-    }
-
     private DishForListResponse toDishForListResponse(Dish dish) {
         DishForListResponse response = new DishForListResponse();
         response.setId(dish.getId());
@@ -569,15 +599,25 @@ public class DtoMapper {
         return response;
     }
 
-    private DishIngredient.Builder toDishIngredient(UUID userId, DishIngredientRequestResponse dto, int index) {
+    private DishIngredient.Builder toDishIngredient(UUID userId, IngredientUpdateRequest dto, int index) {
         return new DishIngredient.Builder().
+                setOrGenerateId(dto.getId()).
                 setConfig(appConfiguration).
                 setName("Ингредиент №" + index + " - " + dto.getFilter().getCategory()).
                 setQuantity(dto.getQuantity()).
                 setFilter(toDishIngredientFilter(userId, dto.getFilter()));
     }
 
-    private Filter toDishIngredientFilter(UUID userId, DishIngredientFilterRequestResponse dto) {
+    private DishIngredient.Builder toDishIngredient(UUID userId, IngredientAddRequest dto, int index) {
+        return new DishIngredient.Builder().
+                generateId().
+                setConfig(appConfiguration).
+                setName("Ингредиент №" + index + " - " + dto.getFilter().getCategory()).
+                setQuantity(dto.getQuantity()).
+                setFilter(toDishIngredientFilter(userId, dto.getFilter()));
+    }
+
+    private Filter toDishIngredientFilter(UUID userId, IngredientFilterRequestResponse dto) {
         List<Filter> filters = new ArrayList<>();
         filters.add(Filter.user(userId));
         filters.add(Filter.anyCategory(dto.getCategory()));
@@ -597,16 +637,17 @@ public class DtoMapper {
         return Filter.and(filters);
     }
 
-    private DishIngredientRequestResponse toDishIngredientRequestResponse(DishIngredient ingredient, int index) {
-        DishIngredientRequestResponse response = new DishIngredientRequestResponse();
+    private IngredientResponse toIngredientResponse(DishIngredient ingredient, int index) {
+        IngredientResponse response = new IngredientResponse();
+        response.setId(ingredient.getId());
         response.setIndex(index);
         response.setQuantity(ingredient.getNecessaryQuantity(BigDecimal.ONE));
         response.setFilter(toDishIngredientFilterRequestResponse(ingredient.getFilter()));
         return response;
     }
 
-    private DishIngredientFilterRequestResponse toDishIngredientFilterRequestResponse(Filter filter) {
-        DishIngredientFilterRequestResponse response = new DishIngredientFilterRequestResponse();
+    private IngredientFilterRequestResponse toDishIngredientFilterRequestResponse(Filter filter) {
+        IngredientFilterRequestResponse response = new IngredientFilterRequestResponse();
 
         ArrayDeque<Filter> stack = new ArrayDeque<>();
         stack.addLast(filter);
@@ -627,15 +668,74 @@ public class DtoMapper {
         return response;
     }
 
-    private MenuItemRequestResponse toMenuItemRequestResponse(MenuItem item) {
-        MenuItemRequestResponse result = new MenuItemRequestResponse();
+    private DishProductsResponse toDishProductsResponse(Dish dish, BigDecimal servingNumber) {
+        DishProductsResponse response = new DishProductsResponse();
+        response.setDishId(dish.getId());
+        response.setDishName(dish.getName());
+        response.setServingNumber(servingNumber);
+        response.setCategories(
+                IntStream.range(0, dish.getIngredientNumber()).
+                        mapToObj(ingredientIndex -> toIngredientProductsResponse(dish, ingredientIndex, servingNumber)).
+                        toList()
+        );
+
+        return response;
+    }
+
+    private IngredientProductsResponse toIngredientProductsResponse(Dish dish,
+                                                                    int ingredientIndex,
+                                                                    BigDecimal servingNumber) {
+        DishIngredient ingredient = dish.getIngredient(ingredientIndex).orElseThrow();
+
+        List<Dish.IngredientProduct> products = dish.getProducts(ingredientIndex, 0).
+                orElseThrow().getContent();
+
+        IngredientProductsResponse response = new IngredientProductsResponse();
+        response.setIngredientIndex(ingredientIndex);
+        response.setProductCategory(ingredient.getName());
+        response.setProducts(
+                products.stream().
+                        map(ingredientProduct ->
+                                toProductAsDishIngredientResponse(dish,
+                                        ingredientProduct,
+                                        ingredientProduct.productIndex() == 0,
+                                        servingNumber)
+                        ).
+                        toList()
+        );
+
+        return response;
+    }
+
+    private DishNameAndIdResponse toDishNameAndIdResponse(MenuItem item) {
+        DishNameAndIdResponse response = new DishNameAndIdResponse();
+        response.setDishId(item.getDish().getId());
+        response.setDishName(item.getDishName());
+        return response;
+    }
+
+    private ItemResponse toMenuItemResponse(MenuItem item, int itemIndex) {
+        ItemResponse result = new ItemResponse();
+        result.setId(item.getId());
         result.setDishName(item.getDishName());
         result.setServingNumber(item.getNecessaryQuantity(BigDecimal.ONE));
+        result.setItemIndex(itemIndex);
         return result;
     }
 
-    private MenuItem.Builder toMenuItem(UUID userId, MenuItemRequestResponse dto) {
+    private MenuItem.Builder toMenuItem(UUID userId, ItemUpdateRequest dto) {
         return new MenuItem.Builder().
+                setOrGenerateId(dto.getId()).
+                setDishName(dto.getDishName()).
+                setQuantity(dto.getServingNumber()).
+                setConfig(appConfiguration).
+                setRepository(dishRepository).
+                setUserId(userId);
+    }
+
+    private MenuItem.Builder toMenuItem(UUID userId, ItemAddRequest dto) {
+        return new MenuItem.Builder().
+                generateId().
                 setDishName(dto.getDishName()).
                 setQuantity(dto.getServingNumber()).
                 setConfig(appConfiguration).
@@ -649,7 +749,11 @@ public class DtoMapper {
         response.setName(menu.getName());
         response.setAveragePrice(menu.getAveragePrice().orElse(null));
         response.setImageUrl(menu.getImageUrl());
-        response.setItems(menu.getItems().stream().map(this::toMenuItemRequestResponse).toList());
+        response.setItems(
+                IntStream.range(0, menu.getMenuItemNumbers()).
+                        mapToObj(i -> toMenuItemResponse(menu.tryGetItem(i), i)).
+                        toList()
+        );
         response.setTags(toTagsResponse(menu.getTags()));
         return response;
     }
